k8s/deploy/kind/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-service
spec:
  selector:
    app: crypto
  ports:
  - port: 80
    targetPort: crypto-http
    protocol: TCP
    name: crypto-http
