k8s/deploy/kind/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: crypto
spec:
  rules:
  - host: crypto-prices.kind.cipheruse.com
    http:
      paths:
      - path: /
        backend:
            serviceName: crypto-service
            servicePort: 80
  tls:
  - hosts:
    - crypto-prices.kind.cipheruse.com
    secretName: cert-kind-wildcard
